# raynder

./: .gitignore  CMakeLists.txt  Makefile  TODO.md  deps.json
doc/: SETUP.md
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp
src/headers/: glm.hpp  opengl.hpp  stl.hpp
src/hello/: hello.cpp
src/opengl/shader/: shaderloader.cpp  shaderloader.hpp
src/opengl/window/: glfw.cpp  glfw.hpp  glfw_window.cpp  glfw_window.hpp
src/shaders/: simple_vertex.glsl
src/util/: util.cpp  util.hpp
tools/: copy.py  git.py  sync.py  zip.py
